--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -887,6 +887,10 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin: 4px;
 }
 
+span.badge.instructions {
+ cursor: pointer;
+}
+
 /*--------------------------------------------------------------
 # Venue Section
 --------------------------------------------------------------*/
