--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,12 @@ p {
   margin: 0 0 30px 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Raleway", sans-serif;
   font-weight: 400;
   margin: 0 0 20px 0;
@@ -37,15 +42,15 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 70px;
 }
 
-.lej-padding{
-    padding-top:2%;
+.lej-padding {
+  padding-top: 2%;
 }
 
 .wow {
   visibility: hidden;
 }
 
-#guidelines > li {
+#guidelines>li {
   margin: 10px 0;
   font-size: 95%;
 }
@@ -104,10 +109,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .section-header::before {
-  display: none;
   content: '';
   position: absolute;
-  display: block;
+  display: none;
   width: 100%;
   height: 1px;
   background: #ccc;
@@ -137,7 +141,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #f6f7fd;
 }
 
-#langSelection > li{
+#langSelection>li {
   margin: 2px;
 }
 
@@ -216,12 +220,12 @@ h1, h2, h3, h4, h5, h6 {
   white-space: nowrap;
 }
 
-.nav-menu > li {
+.nav-menu>li {
   float: left;
 }
 
-.nav-menu li:hover > ul,
-.nav-menu li.sfHover > ul {
+.nav-menu li:hover>ul,
+.nav-menu li.sfHover>ul {
   display: block;
 }
 
@@ -278,11 +282,11 @@ h1, h2, h3, h4, h5, h6 {
   color: #9194a2;
 }
 
-.nav-menu > li {
+.nav-menu>li {
   margin-left: 8px;
 }
 
-.nav-menu > li > a:before {
+.nav-menu>li>a:before {
   content: "";
   position: absolute;
   width: 0;
@@ -295,8 +299,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover:before,
-.nav-menu li:hover > a:before,
-.nav-menu .menu-active > a:before {
+.nav-menu li:hover>a:before,
+.nav-menu .menu-active>a:before {
   visibility: visible;
   width: 100%;
 }
@@ -346,7 +350,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 3px;
 }
 
-.nav-menu ul li:hover > a {
+.nav-menu ul li:hover>a {
   background: #d29e02;
   color: #fff;
 }
@@ -888,12 +892,12 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 0;
 }
 
-#schedule #daySelection > li {
+#schedule #daySelection>li {
   margin: 4px;
 }
 
 span.badge.instructions {
- cursor: pointer;
+  cursor: pointer;
 }
 
 /*--------------------------------------------------------------
@@ -1225,7 +1229,7 @@ span.badge.instructions {
 #buy-tickets .card {
   border: none;
   border-radius: 5px;
-  transition: all  0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   box-shadow: 0 10px 25px 0 rgba(6, 12, 34, 0.1);
 }
 
@@ -1555,6 +1559,7 @@ span.badge.instructions {
 }
 
 @media (min-width: 768px) {
+
   #contact .contact-address,
   #contact .contact-phone,
   #contact .contact-email {
