UI day selection margin

--- a/css/style.css
+++ b/css/style.css
@@ -822,6 +822,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #schedule .nav-tabs li {
   display: inline-block;
   margin-bottom: 0;
+  margin: 0 2px;
 }
 
 #schedule .nav-tabs a {
