--- a/css/style.css
+++ b/css/style.css
@@ -662,6 +662,17 @@ body.mobile-nav-active #mobile-nav-toggle {
   }
 }
 
+#introImage {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#introImage img{
+  max-height: 60vh;
+}
+
+
+
 /*--------------------------------------------------------------
 # About Section
 --------------------------------------------------------------*/
