--- a/css/style.css
+++ b/css/style.css
@@ -914,7 +914,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 0;
 }
 
-#schedule #daySelection>li {
+#schedule .daySelection>li {
   margin: 4px;
 }
 
