--- a/css/style.css
+++ b/css/style.css
@@ -819,7 +819,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------------------------------------*/
 
 #schedule {
-  padding: 40px 0;
+  /* padding: 40px 0; */
   min-height: calc(100vh - 146px); /*dijo - full height schedule*/
 }
 
