--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ h6 {
 --------------------------------*/
 
 .section-header {
-  margin-bottom: 25px;
+  /* margin-bottom: 25px; */
   position: relative;
 }
 
@@ -818,7 +818,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 # Schedule Section
 --------------------------------------------------------------*/
 
-#schedule {
+#holyMass {
   /* padding: 40px 0; */
   min-height: calc(100vh - 146px); /*dijo - full height schedule*/
 }
