--- a/src/css/style.css
+++ b/src/css/style.css
@@ -165,6 +165,7 @@ ul#langSelection li.nav-item {
 ul#langSelection li.nav-item+li.nav-item {
   margin-left: 1px
 }
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
@@ -870,7 +871,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #schedule .nav-tabs li.icon {
   flex-grow: 0;
-  flex-shrink: 0;  
+  flex-shrink: 0;
 }
 
 #schedule .nav-tabs a.active {
@@ -960,7 +961,8 @@ body.mobile-nav-active #mobile-nav-toggle {
   box-shadow: none;
 }
 
-.far, .fas {
+.far,
+.fas {
   vertical-align: middle;
 }
 
@@ -986,6 +988,22 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #videoModal .darkMode .modal-header {
   border: none;
+}
+
+#schedule .daySelection a.nav-link {
+  border-radius: 4px;
+}
+
+#schedule .daySelection a.nav-link .dayName {
+  font-size: 1em;
+}
+
+#schedule .daySelection a.nav-link .dayDate {
+  font-size: 1.5em;
+}
+
+#schedule .daySelection a.nav-link .dayMY {
+  font-size: 0.65em;
 }
 
 /*--------------------------------------------------------------
