--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -723,11 +723,15 @@ body.mobile-nav-active {
         color: #9195a2;
     }
 
+    /*dijo - full height schedule*/
     .fullHeight {
-        /* padding: 40px 0; */
-        min-height: calc(100vh - 70px);
+        min-height: calc(100vh - 146px);
 
-        /*dijo - full height schedule*/
+        //min-height: calc(100vh - 70px);
+
+        // @media (min-height: 650px) {
+        //     min-height: calc(100vh - 146px);
+        // }
     }
 }
 
@@ -1326,12 +1330,6 @@ body.mobile-nav-active {
     .daySelection .nav-item.wide {
         flex-basis: auto;
         flex-grow: 2;
-    }
-}
-
-@media (min-height: 650px) {
-    #holyMass .fullHeight {
-        min-height: calc(100vh - 146px);
     }
 }
 
